<resources>
    <string name="app_name">Toggl Companion App</string>

    <!-- Strings related to login -->

    <!-- Toggl Login -->
    <string name="btn_login">Login</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>

    <!-- Camera Screen -->
    <string name="title_activity_toggl">Toggl Companion</string>

    <!-- Menu -->
    <string name="label_logout">Logout</string>

    <!-- Toggl Landing Page -->
    <string name="label_time_entries">Time Entries</string>
    <string name="btn_create">Create</string>
    <string name="btn_save_all">Save All</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="toggl_description_format">%1$s: %2$s</string>

    <!-- Toggl Edit Time Entry -->
    <string name="label_edit_time_entry">Time Entry</string>
    <string name="label_description">Description</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_change">Change</string>
    <string-array name="entries_minutes_seconds">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="entries_hours">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string name="label_project">Project</string>
    <string name="label_tasks">Tasks</string>
    <string name="label_apply_multiple_days">Apply Entry to Multiple Days?</string>
    <string name="label_date_duration">Date &amp; Duration</string>
    <string name="common_colon">:</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
