<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativeLayout2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/toggl_time_entries_header_bg"
    android:paddingStart="10dp"
    android:paddingTop="15dp"
    android:paddingBottom="5dp"
    android:paddingEnd="10dp">

    <TextView
        style="@style/XXLargeHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_time_entries" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="2dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_create"
            style="@style/GrayButtonSmall"
            android:layout_width="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_create" />

        <Button
            android:id="@+id/btn_save_all"
            style="@style/GrayButtonSmall"
            android:layout_width="wrap_content"
            android:text="@string/btn_save_all" />
    </LinearLayout>
</RelativeLayout>
