<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:paddingBottom="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:layout_height="match_parent">

        <View
            android:id="@+id/status_indicator"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:background="@android:color/holo_red_light"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            style="@style/ListItem.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="EMV Test Project" />

        <TextView
            android:id="@+id/project_name"
            style="@style/ListItem.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:text="PRJ-1234" />

        <TextView
            android:id="@+id/start_time"
            style="@style/ListItem.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="@+id/project_name"
            app:layout_constraintTop_toBottomOf="@id/project_name"
            tools:text="Jun 4, 2020 6:23 PM" />

        <TextView
            android:id="@+id/duration_label"
            style="@style/ListItem.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Duration:"
            app:layout_constraintStart_toStartOf="@+id/start_time"
            app:layout_constraintTop_toBottomOf="@id/start_time" />

        <TextView
            android:id="@+id/duration"
            style="@style/ListItem.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/duration_label"
            app:layout_constraintStart_toEndOf="@+id/duration_label"
            app:layout_constraintTop_toBottomOf="@id/start_time"
            tools:text="05:55:23" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:paddingEnd="7dp"
            android:paddingStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/duration"
            app:layout_constraintEnd_toEndOf="parent">
            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                style="@style/GrayButtonSmall"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_save" />
            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                style="@style/GrayButtonSmall"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_edit" />
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                style="@style/GrayButtonSmall"
                android:text="@string/btn_delete" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
